--- a/LojaQuadrinhosWeb/Views/QuadrinhoState/Update.cshtml
+++ b/LojaQuadrinhosWeb/Views/QuadrinhoState/Update.cshtml
@@ -17,13 +17,13 @@
         </div><!--modal-header-->
         <div class="modal-body">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12">
                     <form asp-action="Update" method="post">
                         @Html.AntiForgeryToken()
                       
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <div class="form-group">
+                        <div class="form-group col-md-4">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
