--- a/LojaQuadrinhosWeb/Views/Quadrinho/AddToCart.cshtml
+++ b/LojaQuadrinhosWeb/Views/Quadrinho/AddToCart.cshtml
@@ -5,7 +5,7 @@
     <div class="modal-content">
 
         <div class="modal-header">
-            <h4 class="modal-title justify-content-center">Add item <span>@Model.Name</span> to cart?</h4>
+            <h4 class="modal-title justify-content-center">Add item <span class="text-danger">@Model.Name</span> to cart?</h4>
             <button type="button" class="close" data-dismiss="modal">
                 <span aria-hidden="true">x</span><span class="sr-only">Close</span>
             </button>
