--- a/LojaQuadrinhosWeb/Views/Shared/_LoginPartial.cshtml
+++ b/LojaQuadrinhosWeb/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,10 @@
 else
 {
     <li class="nav-item">
+        <a class="nav-link text-dark"  href="#">My Basket</a>
+    </li>
+    
+    <li class="nav-item">
         <a class="nav-link text-dark"  asp-controller="account" asp-action="registerext">Register</a>
     </li>
     <li class="nav-item">
