--- a/LojaQuadrinhosWeb/Views/Quadrinho/Index.cshtml
+++ b/LojaQuadrinhosWeb/Views/Quadrinho/Index.cshtml
@@ -9,7 +9,7 @@
 
 @{
 
-    if (this.User.Identity.IsAuthenticated)
+    if (this.User.Identity.IsAuthenticated && !this.User.IsInRole("External") )
     {
 
         <p>
@@ -77,7 +77,7 @@
 
                     @{
 
-                        if (this.User.Identity.IsAuthenticated)
+                        if (this.User.Identity.IsAuthenticated && !this.User.IsInRole("External"))
                         {
                             <button class="btn btn-link edit" data-id="@item.Id">Edit</button>
 
@@ -151,9 +151,6 @@
             </script>
         }
     }
-}
-
-@section scripts{
     <script>
         $(function () {
 
@@ -168,5 +165,5 @@
 
         })
     </script>
-
 }
+ 
